<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- action button for search -->
    <item android:title="@string/search"
        android:id="@+id/item_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_baseline_search_24"/>

    <group android:checkableBehavior="all"
        android:id="@+id/group_items">
        <item android:title="@string/buttons_on_elements"
            android:id="@+id/item_btns_elements"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item android:title="@string/sort_a_z"
            android:id="@+id/item_sort"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item android:title="@string/hide_translation"
            android:id="@+id/item_hide_translate"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item android:title="@string/hide_word"
            android:id="@+id/item_hide_word"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>

    <item android:id="@+id/item_favorite"
        android:title="@string/favorite"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:visible="false"/>

    <!-- action button for delete -->
    <item android:title="@string/delete"
        android:id="@+id/item_delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_delete_24"
        android:visible="false"
        />

    <!-- action button for cancel selection -->
    <item android:title="@string/cancel"
        android:id="@+id/item_cancel"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_clear_24"
        android:visible="false"/>

</menu>