<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Achievements"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"/>
            </androidx.cardview.widget.CardView>

            <View style="@style/Divider.Horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_baseline_text_format_24" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/count_added_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="count"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/added_words"
                                android:textStyle="italic"
                                android:textSize="15sp"
                                android:alpha="0.5"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_baseline_query_stats_24" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/count_learned_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="count"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/learned_words"
                                android:textStyle="italic"
                                android:textSize="15sp"
                                android:alpha="0.5"/>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <View style="@style/Divider.Horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <Button
                    android:id="@+id/delete_words_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete_all_words"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"/>

                <Button
                    android:id="@+id/reset_all_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/reset_all"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true" />
</RelativeLayout>