<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ResultsFragment"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:padding="10dp"
                android:id="@+id/word_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/word"
                android:layout_gravity="center" />
            <View style="@style/Divider.Horizontal"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_incorrect"
                android:textSize="20sp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/kd_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />
                <ImageView
                    android:id="@+id/stonks_image_view"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_arrow_drop_up_24"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <View style="@style/Divider.Horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_progress"
                android:textSize="20sp"
                android:layout_gravity="center"/>
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/text_progress_bar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:max="100" />

                <TextView
                    android:id="@+id/percent_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/text_progress_bar"
                    android:background="@android:color/transparent"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>